# market-matcher

./: README.md  arb_candidates_2026-01-08.csv  arb_matcher.py  arb_matches_2026-01-08.csv  embedding_test.py  pyproject.toml  requirements.txt  state.db
arb_matcher/: __main__.py  api.py  config.py  db.py  matching.py  models.py  verification.py
data/: arb_candidates_2026-01-09_162640.csv  arb_candidates_2026-01-10_103710.csv  arb_candidates_2026-01-10_104923.csv  arb_matches_2026-01-09_162640.csv  arb_matches_all.csv  state.db
