[project]
name = "market-matcher"
version = "0.1.0"
description = "Cross-venue arbitrage detector for prediction markets"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "ollama>=0.1.0",
    "torch>=2.0.0",
]
